<resources>
    <string name="app_name">HackFMI6</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ipAddresses">IP Addresses:</string>
    <string name="front_left">Front \nLeft</string>
    <string name="front">Front</string>
    <string name="front_right">Front \nRight</string>
    <string name="back_left">Back \nLeft</string>
    <string name="back">Back</string>
    <string name="back_right">Back \nRight</string>
    <string name="increase_speed">Increase \nSpeed</string>
    <string name="decrease_speed">Decrease \nSpeed</string>
    <string name="autonomous_driving_on">Turn ON \nAutonomous Driving</string>
    <string name="autonomous_driving_off">Turn OFF \nAutonomous Driving</string>
    <string name="start_camera_streaming">Start Camera streaming</string>
</resources>
