<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hackfmi6" />

    <WebView
        android:id="@+id/webcamView"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="22dp"
        android:background="@android:color/holo_red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="16">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/frontLeftButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:alpha="0.0"
                android:gravity="center"
                android:text="@string/front_left" />

            <Button
                android:id="@+id/frontButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:alpha="0.0"
                android:gravity="center"

                android:text="@string/front" />

            <Button
                android:id="@+id/frontRightButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.0"
                android:gravity="center"
                android:text="@string/front_right" />

            <Button
                android:id="@+id/autonomousDrivingOnButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.2"
                android:gravity="center"
                android:text="@string/autonomous_driving_on" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/backLeftButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:alpha="0.0"
                android:gravity="center"
                android:text="@string/back_left" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:alpha="0.0"
                android:gravity="center"
                android:text="@string/back" />

            <Button
                android:id="@+id/backRightButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:alpha="0.0"
                android:gravity="center"
                android:text="@string/back_right" />

            <Button
                android:id="@+id/autonomousDrivingOffButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.2"
                android:gravity="center"
                android:text="@string/autonomous_driving_off" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginTop="120dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:gravity="center"
                android:text="@string/start_camera_streaming" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>